version/0.33/_sources/api/solver/_autosummary/settings/orientation_2.rst.txt
:orphan:

.. _orientation_2:

orientation
===========

.. autoclass:: ansys.fluent.core.generated.solver.settings_252.orientation_2
    :show-inheritance:

.. rubric:: Attributes

====================   =================================================================================================

Attribute                                                                                                        Summary

====================   =================================================================================================
:ref:`skip <skip_6>`       Display fewer orientation arrows, for cases where the arrow density obscures the orientation.

====================   =================================================================================================

.. rubric:: Methods

==========================================   ==============================

Method                                                              Summary

==========================================   ==============================
:ref:`reverse_surfaces <reverse_surfaces>`       Reverse selected surfaces.

==========================================   ==============================

.. rubric:: Included in:

==============================================   ======================================

Parent                                                                          Summary

==============================================   ======================================
:ref:`definition_3_child <definition_3_child>`       'child_object_type' of definition.

==============================================   ======================================

